<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>space.arim.omnibus</groupId>
	<artifactId>omnibus-parent</artifactId>
	<version>0.15.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>Omnibus</name>
	<description>Parent module for Omnibus</description>
	<url>https://github.com/A248/Omnibus</url>
	<inceptionYear>2019</inceptionYear>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<junit.version>5.6.2</junit.version>
	</properties>

	<licenses>
		<license>
			<name>GNU General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
			<comments>Strong copyleft license, commonly known as the GNU GPL v3</comments>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>anandbeh</id>
			<name>Anand Beh</name>
			<url>https://www.arim.space</url>
			<roles>
				<role>creator</role>
				<role>developer</role>
			</roles>
			<timezone>America/New_York</timezone>
		</developer>
	</developers>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>aggregate</goal>
							<goal>aggregate-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<trimStackTrace>false</trimStackTrace>
						<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.junit.jupiter</groupId>
							<artifactId>junit-jupiter-engine</artifactId>
							<version>${junit.version}</version>
							<scope>runtime</scope>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<modules>
		<module>util</module>
		<module>events</module>
		<module>registry</module>
		<module>resourcer</module>
		<module>api</module>
		<module>default</module>
		<module>core</module>
		<module>all</module>
		<module>all-shaded</module>
	</modules>
	
	<distributionManagement>
		<repository>
			<id>arim-repo</id>
			<url>https://maven.cloudsmith.io/anand-beh/arim-repo/</url>
		</repository>
		<snapshotRepository>
			<id>arim-repo</id>
			<url>https://maven.cloudsmith.io/anand-beh/arim-repo/</url>
		</snapshotRepository>
	</distributionManagement>
	
	<dependencyManagement>
		<dependencies>
			<!-- Own Dependencies -->
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-util</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-events</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-registry</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-resourcer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-default</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>space.arim.omnibus</groupId>
				<artifactId>omnibus-all</artifactId>
				<version>${project.version}</version>
			</dependency>
			<!-- Test Dependencies -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
